...
    "player_aspect": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Aspect ratio"
          }
        },
        "tr": {
          "stringUnit": {
            "state": "translated",
            "value": "Görüntü oranı"
...
    "aspect_fill": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Fill (crop)"
          }
        },
        "tr": {
          "stringUnit": {
            "state": "translated",
            "value": "Doldur (kırp)"
...
    "perr_denied_title": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Access to the stream was denied"
          }
        },
        "tr": {
          "stringUnit": {
            "state": "translated",
            "value": "Yayına erişim reddedildi"
...
